--- a/requirements.txt
+++ b/requirements.txt
@@ -1,181 +1,89 @@
-2captcha-python==1.5.1
-accelerate==1.6.0
+aiofiles==24.1.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.18
+aiosignal==1.3.2
+aiosqlite==0.21.0
 annotated-types==0.7.0
-anticaptchaofficial==1.0.64
 anyio==4.9.0
-appnope==0.1.4
-asttokens==3.0.0
 attrs==25.3.0
-backcall==0.2.0
-beautifulsoup4==4.13.3
-bioc==2.1
-bleach==6.2.0
-blis==1.3.0
-boto3==1.37.33
-botocore==1.37.33
-capsolver==1.0.7
-catalogue==2.0.10
-certifi==2025.1.31
-charset-normalizer==3.4.1
-chromedriver-binary==74.0.3729.6.0
-click==8.1.8
-cloudpathlib==0.21.0
-confection==0.1.5
-conllu==4.5.3
-contourpy==1.3.1
-cycler==0.12.1
-cymem==2.0.11
-dateutils==0.6.12
-decorator==5.2.1
-defusedxml==0.7.1
-Deprecated==1.2.18
-docopt==0.6.2
-en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
-et_xmlfile==2.0.0
-executing==2.2.0
-fastjsonschema==2.21.1
+beautifulsoup4==4.13.4
+Brotli==1.1.0
+certifi==2025.4.26
+cffi==1.17.1
+chardet==5.2.0
+charset-normalizer==3.4.2
+click==8.2.1
+colorama==0.4.6
+Crawl4AI==0.6.3
+cryptography==45.0.2
+cssselect==1.3.0
+distro==1.9.0
+fake-http-header==0.3.5
+fake-useragent==2.2.0
 filelock==3.18.0
-flair==0.15.1
-fonttools==4.57.0
-fsspec==2025.3.2
-ftfy==6.3.1
-gdown==5.2.0
-greenlet==3.1.1
-h11==0.14.0
-h2==4.2.0
-hpack==4.1.0
-httpcore==1.0.8
+frozenlist==1.6.0
+fsspec==2025.5.0
+greenlet==3.2.2
+h11==0.16.0
+httpcore==1.0.9
 httpx==0.28.1
-huggingface-hub==0.30.2
-hyperframe==6.1.0
+huggingface-hub==0.31.4
+humanize==4.12.3
 idna==3.10
-intervaltree==3.1.0
-ipython==8.12.3
-jedi==0.19.2
+importlib_metadata==8.7.0
 Jinja2==3.1.6
-jmespath==1.0.1
-joblib==1.4.2
-jsonlines==4.0.0
+jiter==0.10.0
+joblib==1.5.0
 jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-jupyterlab_pygments==0.3.0
-kiwisolver==1.4.8
-langcodes==3.5.0
-langdetect==1.0.9
-language_data==1.3.0
-lxml==4.9.4
-marisa-trie==1.2.1
+jsonschema-specifications==2025.4.1
+litellm==1.70.2
+lxml==5.4.0
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
-matplotlib==3.10.1
-matplotlib-inline==0.1.7
 mdurl==0.1.2
-mistune==3.1.3
-more-itertools==10.6.0
-mpld3==0.5.10
-mpmath==1.3.0
-murmurhash==1.0.12
-nbclient==0.10.2
-nbconvert==7.16.6
-nbformat==5.10.4
-networkx==3.4.2
+multidict==6.4.4
 nltk==3.9.1
-numpy==2.2.5
-openpyxl==3.1.5
+numpy==2.2.6
+openai==1.75.0
 outcome==1.3.0.post0
-packaging==24.2
-pandas==2.2.3
-pandocfilters==1.5.1
-parso==0.8.4
-pexpect==4.9.0
-pickleshare==0.7.5
-pillow==11.2.1
-pipreqs==0.5.0
-platformdirs==4.3.7
-playwright==1.51.0
-pptree==3.1
-praw==7.8.1
-prawcore==2.4.0
-preshed==3.0.9
-prompt_toolkit==3.0.51
-protobuf==6.30.2
+packaging==25.0
+pillow==10.4.0
+playwright==1.52.0
+propcache==0.3.1
 psutil==7.0.0
-ptyprocess==0.7.0
-pure_eval==0.2.3
-py==1.11.0
-pydantic==2.11.3
-pydantic_core==2.33.1
-pyee==12.1.1
+pycparser==2.22
+pydantic==2.11.4
+pydantic_core==2.33.2
+pyee==13.0.0
 Pygments==2.19.1
-pyparsing==3.2.3
+pyOpenSSL==25.1.0
+pyperclip==1.9.0
 PySocks==1.7.1
-python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
-python-magic==0.4.27
-pytorch_revgrad==0.2.0
-pytz==2025.2
 PyYAML==6.0.2
-pyzmq==26.4.0
+rank-bm25==0.2.2
 referencing==0.36.2
 regex==2024.11.6
 requests==2.32.3
 rich==14.0.0
-rpds-py==0.24.0
-s3transfer==0.11.4
-safetensors==0.5.3
-scikit-learn==1.6.1
-scipy==1.15.2
-segtok==1.5.11
-selenium==4.31.0
-sentencepiece==0.2.0
-shellingham==1.5.4
-six==1.17.0
-sm==0.1.8
-smart-open==7.1.0
+rpds-py==0.25.1
+selenium==4.32.0
 sniffio==1.3.1
+snowballstemmer==2.2.0
 sortedcontainers==2.4.0
-soupsieve==2.6
-spacy==3.8.5
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-sqlitedict==2.1.0
-srsly==2.5.1
-stack-data==0.6.3
-sympy==1.13.1
-tabulate==0.9.0
-textblob==0.19.0
-thinc==8.3.6
-threadpoolctl==3.6.0
-TikTokApi==7.1.0
-tinycss2==1.4.0
+soupsieve==2.7
+tf-playwright-stealth==1.1.2
+tiktoken==0.9.0
 tokenizers==0.21.1
-torch==2.6.0
-tornado==6.4.2
 tqdm==4.67.1
-traitlets==5.14.3
-transformer-smaller-training-vocab==0.4.0
-transformers==4.51.2
-trio==0.29.0
+trio==0.30.0
 trio-websocket==0.12.2
-tweety==0.1.6
-tweety-ns==2.2
-typer==0.15.2
-typing-inspection==0.4.0
+typing-inspection==0.4.1
 typing_extensions==4.13.2
-tzdata==2025.2
-update-checker==0.18.0
 urllib3==2.4.0
-uv==0.6.14
-vaderSentiment==3.3.2
-wasabi==1.1.3
-wcwidth==0.2.13
-weasel==0.4.1
 webdriver-manager==4.0.2
-webencodings==0.5.1
 websocket-client==1.8.0
-Wikipedia-API==0.8.1
-wrapt==1.17.2
 wsproto==1.2.0
-yarg==0.1.9
+xxhash==3.5.0
+yarl==1.20.0
+zipp==3.21.0
